[tool.poetry]
name = "chatalysis"
version = "0.1.0"
description = "Analyze your chat conversations"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "chatalysis" }
]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.1"
tabulate = "^0.8"
matplotlib = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
