[tool.poetry]
name = "chatalysis"
version = "0.2.0"
description = "Analyze your chat conversations"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "chatalysis" }
]

[tool.poetry.scripts]
chatalysis = "chatalysis.main:main"

[tool.poetry.dependencies]
python = "^3.9"
joblib = "*"
tabulate = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
black = "*"
types-tabulate = "*"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--cov=quantifiedme --cov-report=xml --cov-report=html --cov-report=term" # --profile --cov-report=term 
testpaths = [
    "chatalysis",
]
python_files = ["*.py",]
filterwarnings = ["ignore::DeprecationWarning",]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
